src/objects/SMS_Schedule_SMS_c__c.object
<CustomObject>
    <fields>
        <fullName>Context_Record_Opportunity__c</fullName>
        <label>Context Record (Opportunity)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Context_Record__c</fullName>
        <label>Context Record (Lead)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Immediate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Content__c</fullName>
        <label>SMS Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMS_Long_text__c</fullName>
        <label>SMS Long text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMS_Time__c</fullName>
        <label>SMS Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sender_Mobile__c</fullName>
        <label>Sender Mobile</label>
        <type>Phone</type>
    </fields>
    <label>SMS Schedule SMS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sender_Mobile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Immediate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SMS Schedule SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Schedule SMS</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>